<resources>
    <string name="app_name">Intents APP</string>
    <string name="buttonText_takeapic">Take a pic!</string>
    <string name="buttonText_browse">Select a file</string>
    <string name="buttonText_justShow">Pick-air-pic!</string>
    <string name="toastText_error">An error has occurred. Please, try again.</string>
    <string name="toastText_Url">Invalid URL. Please, try again</string>
    <string name="toastText_Phone">Invalid phone number.Please, try again</string>
    <string name="insertText_Url">Insert URL here</string>
    <string name="insertText_Activity">Insert text here</string>
    <string name="buttonText_Activity">GO!</string>
    <string name="selectText_Website">Please, select a Web browser</string>
    <string name="imageView_ContentDescription">Here you will see the current image</string>
    <string name="selectText_Pic">Please, select a pic gallery APP</string>
    <string name="wwwButton_Description">Go to submitted website</string>
    <string name="phoneButton_Description">Call to submitted number</string>
    <string name="alarmButton_Description">Set the alarm</string>
    <string name="insertText_Phone">Insert phone number to call here</string>

    <string-array name="hour_Array">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="minute_Array">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>


    <string-array name="days_Array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


</resources>
